--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
 <!-- End Meta Pixel Code -->
-    <title>Himanshu Cricket Prediction</title>
+    <title> 𝐏𝐀𝐍𝐃𝐈𝐓 𝐏𝐑𝐄𝐃𝐈𝐂𝐓𝐈𝐎𝐍™ (𝟐𝟎𝟏𝟔)</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
