--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
 
 <head>
 <!-- End Meta Pixel Code -->
-    <title> 𝐏𝐀𝐍𝐃𝐈𝐓 𝐏𝐑𝐄𝐃𝐈𝐂𝐓𝐈𝐎𝐍™ (𝟐𝟎𝟏𝟔)</title>
+      <link rel="icon" href="./img1.jpg">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    
+     <title> 𝐏𝐀𝐍𝐃𝐈𝐓 𝐏𝐑𝐄𝐃𝐈𝐂𝐓𝐈𝐎𝐍™ (𝟐𝟎𝟏𝟔)</title>
+ 
       <style>
         a{
               text-decoration: none;
