--- a/index.html
+++ b/index.html
@@ -10610,7 +10610,8 @@ window.open('https://t.me/+JDrTqQahno4wNGM1');
         }
     }, 1000);
 </script>
-  
+   <footer style="position: absolute; bottom: 0; background-color: rgb(255, 255, 255); width: 100%; text-align: center; text-transform: uppercase; z-index:99 !important;  "><a href="https://t.me/digitalranjan24" style="color: black; text-decoration: none;">  Advertisment By <strong style="color: blue; text-decoration:underline; text-transform: none;"> DigitalRanjan </strong></a></footer>
+ 
 </body>
 
 </html>
